Prevent names from wrapping in chat

--- a/main/style.css
+++ b/main/style.css
@@ -629,6 +629,7 @@ html {
 .chat-name {
 	font-weight: 700;
 	color: var(--unknown-chat);
+	white-space: nowrap;
 }
 
 .red>.chat-name {
